--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
             <version>1.5.2</version>
         </dependency>
+        <!--MONGO DB -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
