--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=9000
 spring.webflux.base-path=/reactive-example-api
 info.build.version=@project.version@
+spring.data.mongodb.uri=mongodb://localhost:27017/generic
